--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
       <div class="header-right-btn">
 
-        <div class="lang">
+        <div class="lang" id="btn-Lang">
           <button onclick='changeLanguage("ko")' id="lang">KO</button>
         </div>
 
