--- a/index_ko.html
+++ b/index_ko.html
@@ -90,7 +90,7 @@
 
       <div class="header-right-btn">
 
-        <div class="lang">
+        <div class="lang" id="btn-Lang">
             <button onclick='changeLanguage("en")' id="lang">EN</button>
           </div>
 
@@ -142,8 +142,8 @@
       <ol>
         <li><a href="#Home">Home</a></li>
         <li><a href="#Introduction">소개</a></li>
-        <li><a href="#MainCharacters">등장 인물들</a></li>
-        <li><a href="#DigitalRebirthEvents">디지털 환생 이벤트</a></li>
+        <li><a href="#MainCharacters">등장인물들</a></li>
+        <li><a href="#DigitalRebirthEvents">디지털 환생 작업과정</a></li>
         <li><a href="#NFTs">NFTs</a></li>
         <li><a href="#DigitalExpansionPlan">디지털 확장 계획</a></li>
         <!-- <li><a href="#Roadmap">Roadmap</a></li> -->
@@ -248,7 +248,7 @@
     <section id="MainCharacters" class="section3">
       <div class="Container">
         <div class="textarea">
-          <h2 data-scroll="toggle(.scaleDownIn, .scaleDownOut)">Main Characters</h2>
+          <h2 data-scroll="toggle(.scaleDownIn, .scaleDownOut)">등장인물들</h2>
         </div>
 
         <div class="imgarea grid">
@@ -340,7 +340,7 @@
     <section id="DigitalRebirthEvents" class="section4">
       <div class="Container">
         <div class="textarea grid">
-          <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">디지털 환생 이벤트</h2>
+          <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">디지털 환생 작업과정</h2>
           <p data-scroll="toggle(.fromTopIn, .fromTopOut)" class="subtitle delay-3">2022년 4월 6일 ~ 26일</p>
         </div>
 
@@ -367,7 +367,7 @@
                 <img src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/nft-full.jpg" alt="" />
               </div>
               <div>
-                <p class="NFTs-typeNum">타입 1</p>
+                <p class="NFTs-typeNum">유형 1</p>
                 <p class="NFTs-typeName subtitle">전체 그림</p>
                 <p class="NFTs-quantity">30 NFTs</p>
                 <p class="NFTs-quantityPer">수량: NFT당 1개</p>
@@ -379,7 +379,7 @@
                 <img src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/nft-fullbody.jpg" alt="" />
               </div>
               <div>
-                <p class="NFTs-typeNum">타입 2</p>
+                <p class="NFTs-typeNum">유형 2</p>
                 <p class="NFTs-typeName subtitle">바디 샷</p>
                 <p class="NFTs-quantity">80~100 NFTs</p>
                 <p class="NFTs-quantityPer">수량: NFT당 10개</p>
@@ -391,7 +391,7 @@
                 <img src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/nft-bust.jpg" alt="" />
               </div>
               <div>
-                <p class="NFTs-typeNum">타입 3</p>
+                <p class="NFTs-typeNum">유형 3</p>
                 <p class="NFTs-typeName subtitle">버스트 샷</p>
                 <p class="NFTs-quantity">80~100 NFTs</p>
                 <p class="NFTs-quantityPer">수량: NFT당 10개</p>
@@ -403,7 +403,7 @@
                 <img src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/nft-head.jpg" alt="" />
               </div>
               <div>
-                <p class="NFTs-typeNum">타입 4</p>
+                <p class="NFTs-typeNum">유형 4</p>
                 <p class="NFTs-typeName subtitle">헤드 샷</p>
                 <p class="NFTs-quantity">80~100 NFTs</p>
                 <p class="NFTs-quantityPer">수량: NFT당 10개</p>
@@ -415,7 +415,7 @@
                 <img src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/nft-face.jpg" alt="" />
               </div>
               <div>
-                <p class="NFTs-typeNum">타입 5</p>
+                <p class="NFTs-typeNum">유형 5</p>
                 <p class="NFTs-typeName subtitle">얼굴 샷</p>
                 <p class="NFTs-quantity">80~100 NFTs</p>
                 <p class="NFTs-quantityPer">수량: NFT당 10개</p>
@@ -427,7 +427,7 @@
                 <img src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/nft-obj.jpg" alt="" />
               </div>
               <div>
-                <p class="NFTs-typeNum">타입 6</p>
+                <p class="NFTs-typeNum">유형 6</p>
                 <p class="NFTs-typeName subtitle">오브젝트 샷</p>
                 <p class="NFTs-quantity">80~100 NFTs</p>
                 <p class="NFTs-quantityPer">수량: NFT당 10개</p>
@@ -446,7 +446,7 @@
 
         <div class="imgarea grid">
           <div id="thesandbox">
-            <h3 data-scroll="toggle(.fromTopIn, .fromTopOut)">Metaverse Evolution</h3>
+            <h3 data-scroll="toggle(.fromTopIn, .fromTopOut)">메타버스 진화</h3>
 
             <p class="expansion-banner" data-scroll="toggle(.fromBottomIn, .fromBottomOut)">
               <img src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/expansion-banner-thesandbox_new.jpg" alt="" />
@@ -475,7 +475,7 @@
           </div>
 
           <div id="Homage">
-            <h3 data-scroll="toggle(.fromTopIn, .fromTopOut)">Homage to Hyewon</h3>
+            <h3 data-scroll="toggle(.fromTopIn, .fromTopOut)">오마주</h3>
 
             <div class="Expansion-img">
               <div class="partner_hth Expansion-img-1" data-scroll="toggle(.scaleDownIn, .scaleDownOut)">
