--- a/index_ko.html
+++ b/index_ko.html
@@ -357,7 +357,7 @@
     <section id="NFTs" class="section5">
       <div class="Container">
         <div class="textarea">
-          <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">NFT의 6가지 유형</h2>
+          <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">NFT 유형</h2>
         </div>
 
         <div class="imgarea grid">
