--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <link rel="stylesheet" href="./css/base.css" />
     <link rel="stylesheet" href="./css/grid.css" />
     <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/media.css" />
     <link rel="stylesheet" href="./css/ScrollTrigger.css" />
     <script type="text/javascript" src="./js/ScrollTrigger.js"></script>
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
@@ -140,6 +141,7 @@
         <li><a href="#DigitalRebirthEvents">Digital Rebirth Events</a></li>
         <li><a href="#NFTs">NFTs</a></li>
         <li><a href="#DigitalExpansionPlan">Digital Expansion Plan</a></li>
+        <li><a href="#Media">Media</a></li>
         <!-- <li><a href="#Roadmap">Roadmap</a></li> -->
         <li><a href="#Team">Team</a></li>
         <li><a href="#Partner">Partner</a></li>
@@ -470,19 +472,87 @@
       </div>
     </section>
 
-    <!-- <section id="Roadmap" class="section7">
+
+    <!--media-->
+    <section id="Media" class="section7">
       <div class="Container">
         <div class="textarea">
-          <h2 data-scroll="toggle(.scaleDownIn, .scaleDownOut)">Sales Roadmap</h2>
+          <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">Media</h2>
         </div>
 
-        <div class="imgarea" data-scroll="toggle(.scaleDownIn, .scaleDownOut)">
-          <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="subtitle delay-3">
-            Coming Soon
-          </p>
+        <div>
+          <table id="news">
+            <tr>
+                <td id="name">혜원전신첩 NFT로... 간송 미술관 메타버스 전시회</td>
+                <td id="day">2022.05.26</td>
+                <td id="med">여성경제신문</td>
+            </tr>
+            <tr>
+                <td id="name">기사1</td>
+                <td id="day">일자</td>
+                <td id="med">매체</td>
+            </tr>
+            <tr>
+              <td id="name">기사2</td>
+              <td id="day">일자</td>
+              <td id="med">매체</td>
+            </tr>
+            <tr>
+              <td id="name">기사3</td>
+              <td id="day">일자</td>
+              <td id="med">매체</td>
+            </tr>
+            <tr>
+              <td id="name">기사4</td>
+              <td id="day">일자</td>
+              <td id="med">매체</td>
+             </tr>
+          </table>
+          <div id="con"></div>
+          <p id="news_num">  1   2   3   4   5 </h1>
         </div>
+        
+        <div id="con"></div>
+
+        <div id="news2">
+          <div id="left">
+            <h3>혜원전신첩 NFT로... 간송 미술관 메타버스 전시회</h3>
+            <p id="day3">2022.05.26</p>
+            <p>조선 후기 풍속 화가 혜원 신윤복의 혜원전신첩이 메타버스를 통해 재탄생한다. 혜원전신첩은 총 30장면으로 구성된 풍속화첩이다. 조선시대 당시 남녀 간의 춘정을 생생하게 표현했다. 26일 간송미술관 감사를 지낸 권국현 법무법인 이제 변호사는 여성경제신문과 통화에서 "4억 화소의 정교한 화질로 재구성한....
+            </p>
+          </div>
+          <div id="right">
+            <table id="news">
+              <tr>
+                  <td id="name2">혜원전신첩 NFT로... 간송 미술관 메타버스 전시회</td>
+                  <td id="day2">2022.05.26</td>
+              </tr>
+              <tr>
+                  <td id="name2">기사1</td>
+                  <td id="day2">일자</td>
+              </tr>
+              <tr>
+                <td id="name2">기사2</td>
+                <td id="day2">일자</td>
+              </tr>
+              <tr>
+                <td id="name2">기사3</td>
+                <td id="day2">일자</td>
+              </tr>
+              <tr>
+                <td id="name2">기사4</td>
+                <td id="day2">일자</td>
+               </tr>
+            </table>
+          </div>
+        </div>
+
+
       </div>
-    </section>-->
+    </section>
+
+
+
 
     <section id="Team" class="section10">
       <div class="Container">
