--- a/index_ko.html
+++ b/index_ko.html
@@ -75,7 +75,7 @@
 
     <script type="text/javascript">
       $(document).ready(function () {
-        $("#header-inner").load("./page/header.html");
+        $("#header-inner").load("./page/header_ko.html");
         $("#sidebar").load("./page/sidebar.html");
       });
     </script>
