--- a/walletinstall/walletinstall.html
+++ b/walletinstall/walletinstall.html
@@ -102,7 +102,7 @@
           <a
             target="_blank"
             style="text-decoration: underline; color: white; font-size: 25px"
-            href="../index.html"
+            href="../Kansong_Metaverse_Museum.html"
             >Go to Minting page</a
           >
           <br />
