--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <script src="./js/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="./css/base.css" />
     <link rel="stylesheet" href="./css/grid.css" />
+    <link rel="stylesheet" href="./css/media.css" />
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/ScrollTrigger.css" />
     <script type="text/javascript" src="./js/ScrollTrigger.js"></script>
@@ -146,6 +147,7 @@
         <li><a href="#DigitalRebirthEvents">Digital Rebirth Events</a></li>
         <li><a href="#NFTs">NFTs</a></li>
         <li><a href="#DigitalExpansionPlan">Digital Expansion Plan</a></li>
+        <li><a href="#Media">Media</a></li>
         <!-- <li><a href="#Roadmap">Roadmap</a></li> -->
         <li><a href="#Team">Team</a></li>
         <li><a href="#Partner">Partner</a></li>
@@ -489,6 +491,20 @@
           </div>
 
         </div>
+      </div>
+    </section>
+
+    <section id="Media" class="section7">
+      <div class="Container">
+        <div class="textarea">
+          <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">Media</h2>
+          <h1 id="main_h1" data-scroll="toggle(.fromTopIn, .fromTopOut)">Kansong Metaverse Museum</h1>
+        </div>
+
+        <div class="imgarea" data-scroll="toggle(.scaleDownIn, .scaleDownOut)">
+          <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="subtitle delay-3">
+            Coming Soon
+          </p>
       </div>
     </section>
 
