--- a/index_ko.html
+++ b/index_ko.html
@@ -54,6 +54,7 @@
     <link rel="stylesheet" href="./css/grid.css" />
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/ScrollTrigger.css" />
+    <link rel="stylesheet" href="./css/media.css" />
     <script type="text/javascript" src="./js/ScrollTrigger.js"></script>
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
@@ -146,6 +147,7 @@
         <li><a href="#DigitalRebirthEvents">디지털 환생 작업과정</a></li>
         <li><a href="#NFTs">NFTs</a></li>
         <li><a href="#DigitalExpansionPlan">디지털 확장 계획</a></li>
+        <li><a href="#Media">기사</a></li>
         <!-- <li><a href="#Roadmap">Roadmap</a></li> -->
         <li><a href="#Team">프로젝트팀</a></li>
         <li><a href="#Partner">파트너</a></li>
@@ -488,6 +490,20 @@
           </div>
 
         </div>
+      </div>
+    </section>
+
+    <section id="Media" class="section7">
+      <div class="Container">
+        <div class="textarea">
+          <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">기사</h2>
+          <h1 id="main_h1" data-scroll="toggle(.fromTopIn, .fromTopOut)">간송 메타버스 뮤지엄</h1>
+        </div>
+
+        <div class="imgarea" data-scroll="toggle(.scaleDownIn, .scaleDownOut)">
+          <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="subtitle delay-3">
+            Coming Soon
+          </p>
       </div>
     </section>
 
