--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
+    <!-- Google search console -->
+    <meta name="google-site-verification" content="JVnAZQ5_-AuZOb0JhGm53t0UaLmq8ycyikotaO22kO4" />
+
     <!-- Meta Tag -->
     <!-- Primary Meta Tags -->
     <meta name="title" content="Kansong Metaverse Museum - connecting the past and future" />
