--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
           </video>
         </div>
         <div class="textarea grid">
-          <h1 data-scroll="toggle(.fromLeftIn, .fromLeftOut)">
+          <div id="sub_h1" data-scroll="toggle(.fromLeftIn, .fromLeftOut)">
             <p>Kansong</p>
             <span id="typing"></span>
             <p>Museum</p>
-          </h1>
+          </div>
         </div>
       </div>
     </section>
