--- a/index_ko.html
+++ b/index_ko.html
@@ -150,7 +150,7 @@
         <li><a href="#DigitalRebirthEvents">디지털 환생 작업과정</a></li>
         <li><a href="#NFTs">NFTs</a></li>
         <li><a href="#DigitalExpansionPlan">디지털 확장 계획</a></li>
-        <li><a href="#Media">기사</a></li>
+        <li><a href="#Media">뉴스</a></li>
         <!-- <li><a href="#Roadmap">Roadmap</a></li> -->
         <li><a href="#Team">프로젝트팀</a></li>
         <li><a href="#Partner">파트너</a></li>
@@ -173,11 +173,11 @@
           </video>
         </div>
         <div class="textarea grid">
-          <h1 data-scroll="toggle(.fromLeftIn, .fromLeftOut)">
+          <div id="sub_h1" data-scroll="toggle(.fromLeftIn, .fromLeftOut)">
             <p>Kansong</p>
             <span id="typing"></span>
             <p>Museum</p>
-          </h1>
+          </div>
         </div>
       </div>
     </section>
@@ -499,7 +499,7 @@
     <section id="Media" class="section7">
       <div class="Container">
         <div class="textarea">
-          <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">기사</h2>
+          <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">뉴스</h2>
           <h1 id="main_h1" data-scroll="toggle(.fromTopIn, .fromTopOut)">간송 메타버스 뮤지엄</h1>
         </div>
 
