Revert "Update h1->div"
This reverts commit 57748187b0a2eee58c328523aa1fa1dd96dc5150.

--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
           </video>
         </div>
         <div class="textarea grid">
-          <div id="sub_h1" data-scroll="toggle(.fromLeftIn, .fromLeftOut)">
+          <h1 data-scroll="toggle(.fromLeftIn, .fromLeftOut)">
             <p>Kansong</p>
             <span id="typing"></span>
             <p>Museum</p>
-          </div>
+          </h1>
         </div>
       </div>
     </section>
