--- a/index_ko.html
+++ b/index_ko.html
@@ -533,17 +533,17 @@
             <p data-scroll="toggle(.fromTopIn, .fromTopOut)" class="subtitle">간송미술관 소개</p>
 
             <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
-                간송미술관은 1938년 한국 최초의 근대식 사립미술관으로 개관한 이래 국내 3대 미술관으로 손꼽히는 독보적인 명성을 자랑합니다.
+              간송미술관은 1938년 한국 최초의 근대식 사립미술관으로 개관한 이래 지금까지 우리나라를 대표하는 사립미술관 중 한 곳으로 자리매김하고 있습니다.
             </p>
             <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
-                간송 컬렉션은 석조 작품, 금속 작품, 도예, 회화, 고서 6세기부터 20세기 초반에 걸친 한국의 고미술품으로 구성되어 있습니다.
-                일제강점기에 설립된 간송미술관은 문화를 통해 민족의 정신을 보전한다는 '문화보국'의 창립 이념으로도 유명합니다.
+              간송 컬렉션은 석조 작품, 금속 작품, 도예, 회화, 고서 등 6세기부터 20세기 초반에 걸친 한국의 고미술품과 서책으로 구성되어 있습니다. 
+              일제강점기에 설립된 간송미술관은 문화를 통해 우리민족의 정신을 지킨다는 '문화보국'의 건립 이념으로도 유명합니다.
             </p>
             <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
-                간송미술관의 창시자인 간송 천형필은 일제강점기 및 일제강점기에 대한 선구적인 작업으로 한국 문화유산의 수호자로 여겨지는 한국 역사상 가장 유명한 미술 ​​수집가 중 한 명입니다.
+              간송미술관을 건립한 간송 전형필 선생은 일제강점기부터 한국전쟁을 거치면서 한국 문화유산의 수호자로 여겨지는 우리나라 역사상 가장 유명한 미술 ​​수집가 중 한 명입니다.
             </p>
             <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-5">
-                간송미술관의 대표적인 소장품으로는 국보 12점, 보물 32점, 서울시 지정문화재 4점 등 교과서에 등장하는 상당수의 문화재를 보유하고 있습니다. 그 중 한글의 창제원리가 학술적으로 규명되어 한글의 과학성과 독창성을 입증하여 유네스코 세계기록문화유산에  등재된 훈민정음 해례본도 소장하고 있습니다 . 그 외에도 청자운학문매병(국보 제68호),신윤복의 미인도, 겸재 정선의 해악전신첩 등 국내 어떤 박물관도 따라갈 수 없는 높은 수준의 문화재를 보유하고 있습니다.
+              간송미술관의 대표적인 소장품에는 국보 12점, 보물 32점, 서울시 지정문화재 4점 등 수 많은 중요문화재들이 포함되어 있습니다. 그 중에 한글의 창제원리가 학술적으로 규명되어 한글의 과학성과 독창성을 입증하여 유네스코 세계기록문화유산에 등재된 훈민정음 해례본(국보 제70호)과 청자상감운학문매병(국보 제68호), 혜원 신윤복의 혜원전신첩(국보 제135호), 겸재 정선의 해악전신첩(보물 제1949호) 등 우리나라 문화사, 미술사를 대표하는 기준작들을 다수 포함하고 있습니다.
             </p>
           </div>
 
