--- a/index_ko.html
+++ b/index_ko.html
@@ -200,12 +200,13 @@
 
           <div>
             <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
-                신윤복은 본명보다 혜원으로 더 잘 알려져있으며, 궁중화가 신한평의 장남입니다. 특히 신윤복은 인간의 모습을 잘 묘사했으며, 심지어 명성을 중시하는 궁중 화가들에게 금기시된 매혹적인 여성의 그림을 대담하게 그리기까지 했습니다. 
+              신윤복은 궁중화가였던 '일재 신한평'의 장남으로, 본명 '신윤복'보다 호 '혜원'으로 더 잘 알려진 조선 후기의 풍속화가입니다. 신윤복은 궁중 화가에게 금기시되었던 매혹적인 여성의 모습을 대담하게 화폭에 담아냈습니다.
             </p>
             <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-5">
-                이 전신첩은 최고로 많이 알려진 신윤복의 작품 중 하나입니다. 이 전신첩에는 18세기 한양(현재 서울) 사람들의 풍속화 30점이 수록되어 있습니다.
+              이 '혜원전신첩'은 신윤복의 대표적인 작품 중 하나로, 18세기 당시 사람들의 유흥과 남녀간의 애정사를 그려낸 30점의 작품들로 구성되어 있습니다.
             </p>
-            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-8">다양한 상황에 처한 사람들을 아주 자세하게 묘사하고 있으며, 각각의 그림은 그들의 복잡한 감정 뿐만 아니라 육체적 아름다움도 강조합니다.</p>
+            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-8">
+              한양(현재 서울)을 배경으로 기생들과 함께 어울리는 선비들의 다양한 모습, 여인들의 목욕하는 모습, 남녀 간의 춘정 등을 생생하게 묘사하고 있으며, 이를 통해 당시의 사회상을 가감없이 보여주고, 지극히 인간적인 감정과 정서를 오롯이 전달하고 있습니다.</p>
           </div>
 
           <!-- <div class="line"></div> -->
