Address Form Final 2

--- a/address.html
+++ b/address.html
@@ -190,7 +190,7 @@
                 </div>
 
                 <div>
-                  <p>개인정보의 수집 및 이용목적</p>
+                  <p>Personal data collection purpose</p>
                   <textarea rows="5" placeholder="참고항목" disabled>Kansong Metaverse Museum intends to collect and use personal information as follows for the pre-sale printed copy presentation event. Please read the contents carefully and decide whether to agree or not.
 
 1) Purpose of collection and use: Sending printed copies according to event participation and managing payment details
@@ -201,7 +201,7 @@ You have the right to refuse to consent to the collection and use of personal in
 However, if you do not agree, participation in the guerrilla event may be restricted.</textarea>
                   <span class="agree">
                     <input type="checkbox" id="o_agree" onchange="o_checked()">
-                    <label for="o_agree">위 개인정보 수집·이용에 동의합니다</label>
+                    <label for="o_agree">I agree to the collection and use of personal information</label>
                   </span>
                 </div>
 
