--- a/address.html
+++ b/address.html
@@ -239,7 +239,7 @@ However, if you do not agree, participation in the guerrilla event may be restri
     <script src="./dist/bundle.js" type="text/javascript"></script>
     <script src="./js/firebase.js" defer type="module" type="text/javascript"></script>
     <script src="./js/countryCode.js" type="text/javascript"></script>
-    <!-- <script>
+    <script>
       for(let i = 0; i < country.length; i++) {
         const newOption = document.createElement("option");
         newOption.value = country[i].dial_code;
@@ -261,6 +261,6 @@ However, if you do not agree, participation in the guerrilla event may be restri
       function o_checked() {
         document.getElementById('o_agree').value = "true"
       }
-    </script> -->
+    </script>
   </body>
 </html>
