--- a/address.html
+++ b/address.html
@@ -103,6 +103,12 @@
               </div>
             </div>
 
+            <div class="no_nft" style="display:none;">
+              <div id="currentAddress"></div>
+              <p>이 주소는 혜원 전신첩 NFT를 보유하고 있지 않습니다.</p>
+              <p>지갑의 주소를 확인해주세요.</p>
+            </div>
+
             <div class="myInfo" style="display:none;">
               <div id="nftBal">보유한 NFT 수량 : <span id="nftBalance"></span></div>
               <div id="userAddress"></div>
@@ -239,26 +245,37 @@ However, if you do not agree, participation in the guerrilla event may be restri
     <script src="./js/firebase.js" defer type="module" type="text/javascript"></script>
     <script src="./js/countryCode.js" type="text/javascript"></script>
     <script>
+      CheckConnection();
       for(let i = 0; i < country.length; i++) {
         const newOption = document.createElement("option");
         newOption.value = country[i].dial_code;
         newOption.textContent = country[i].name
         document.getElementsByTagName("select")[0].appendChild(newOption);
-
       }
-
       function getselect() {
         let select = document.getElementById('country');
         let option = select.options[select.selectedIndex];
         document.getElementById('overseas_country_code').value = option.value;
         document.getElementById('overseas_country_code').innerHTML = option.value;
       }
-
       function k_checked() {
         document.getElementById('k_agree').value = "true"
       }
       function o_checked() {
         document.getElementById('o_agree').value = "true"
+      }
+      async function CheckConnection(){
+        if (typeof window.ethereum !== "undefined") {
+          try {
+            const accounts = await ethereum.request({ method: "eth_accounts" });
+            console.log("accounts =>", accounts);
+            if(accounts.length > 0){
+              bundle.connect();
+            }
+          }catch (error) {
+            console.log(error);
+          }
+        }
       }
     </script>
   </body>
