Address Form Final 6

--- a/address.html
+++ b/address.html
@@ -107,6 +107,8 @@
               <div id="currentAddress"></div>
               <p>이 주소는 혜원 전신첩 NFT를 보유하고 있지 않습니다.</p>
               <p>지갑의 주소를 확인해주세요.</p>
+              <p>This address does not have Hyewon NFT.</p>
+              <p>Please check the address of the wallet.</p>
             </div>
 
             <div class="myInfo" style="display:none;">
