Address Form Final 7

--- a/address.html
+++ b/address.html
@@ -71,7 +71,8 @@
     <section class="section1">
       <div class="Container">
         <h3>Pre-sale benefits</h3>
-        <p>High-definition print of 'A dano day scene'</p>
+        <p>High-quality print of 'A dano day scene' authorized by Kansong Art Museum<br>
+          간송미술관이 인증한 단오풍정 영인본</p>
 
         <div class="imgarea grid">
           <div><img src="img\introduction\017.jpg" alt=""></div>
@@ -108,7 +109,7 @@
               <p>이 주소는 혜원 전신첩 NFT를 보유하고 있지 않습니다.</p>
               <p>지갑의 주소를 확인해주세요.</p>
               <p>This address does not have Hyewon NFT.</p>
-              <p>Please check the address of the wallet.</p>
+              <p>Please check the address of your wallet.</p>
             </div>
 
             <div class="myInfo" style="display:none;">
