Update address.html banner

--- a/index_ko.html
+++ b/index_ko.html
@@ -157,9 +157,9 @@
       </ol>
     </nav>
 
-    <div id="popup" style="display:none;">
+    <div id="popup">
       <div>
-        <a href="mintingInfo.html" target="_self"><img src="./img/popup.jpg" alt=""></a>
+        <a href="address.html" target="_self"><img src="img\Pre_sale_benefits_ko.jpg" alt=""></a>
       </div>
       <div class="popup_close"><div>&#215;</div></div>
       <!-- <div class="close"><button type="toggle" name="close_btn"></button>&#215;</div> -->
