--- a/index.html
+++ b/index.html
@@ -157,12 +157,11 @@
       </ol>
     </nav>
 
-    <div id="popup" style="display:none;">
+    <div id="popup">
       <div>
-        <a href="mintingInfo.html" target="_self"><img src="./img/popup.jpg" alt=""></a>
+        <a href="address.html" target="_self"><img src="img\Pre_sale_benefits_en.jpg" alt=""></a>
       </div>
       <div class="popup_close"><div>&#215;</div></div>
-      <!-- <div class="close"><button type="toggle" name="close_btn"></button>&#215;</div> -->
     </div>
 
     <section id="Home" class="section1">
