--- a/address.html
+++ b/address.html
@@ -117,7 +117,6 @@
               <div id="userAddress"></div>
             </div>
 
-
             <div class="modal_content">
               <div class="delivery" style="display:none;">
                 <div>
@@ -240,6 +239,7 @@ However, if you do not agree, participation in the guerrilla event may be restri
 
           </div>
         </div>
+        <div id="userArr" style="opacity: 0;"></div><div id="o_userArr" style="opacity: 0;"></div>
       </div>
     </section>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
