--- a/address.html
+++ b/address.html
@@ -75,12 +75,16 @@
           간송미술관이 인증한 단오풍정 영인본</p>
 
         <div class="imgarea grid">
-          <div class='imgFrame'><img src="img\introduction\017.jpg" alt=""></div>
-        </div>
+          <div class="grid">
+            <div class='imgFrame'><img src="img\introduction\017.jpg" alt=""></div>
 
-        <iframe style="display: none;" class="imgarea grid youTubeFrame" width="840" height="472.5" src="https://www.youtube.com/embed/hus-Lmvib4s?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <a class='imgFrame' style="font-size: 24px; font-weight: 400; text-align:center; display: block;" href="https://youtu.be/hus-Lmvib4s">영인본 미리보기</a>
-        
+            <div class="youTubeFrame">
+              <iframe style="display: block;" src="https://www.youtube.com/embed/hus-Lmvib4s?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+        <iframe style="display: none;" class="imgarea grid tubeFrame" width="840" height="472.5" src="https://www.youtube.com/embed/hus-Lmvib4s?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
         <div class="textarea grid" style="display:none;">
           <div>
             <h5>주의사항</h5>
